--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,6 @@
-{% comment %} <section class="comment-area">
+{% comment %} 
+
+<section class="comment-area">
   <div class="comment-wrapper">
     {% if site.discus-identifier %}
     <div id="disqus_thread" class="article-comments"></div>
@@ -13,4 +15,6 @@
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     {% endif %}
   </div>
-</section> <!-- End Comment Area --> {% endcomment %}
+</section> <!-- End Comment Area -->
+
+{% endcomment %}
