--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>{% if page.title %}{{page.title}} - {{site.title}}{% else %}{{site.title}}{% endif %}</title>
-
+  
+  <meta name="google-site-verification" content="-T-_m87pRLetQKbdnx4ooXXYHX2RKCriEBNqYOdIpHs" />
+  
   <!-- Edit site and author settings in `_config.yml` to make the social details your own -->
 
     <meta content="{{ site.title }}" property="og:site_name">
